--- a/templates/pokemon/index.html.twig
+++ b/templates/pokemon/index.html.twig
@@ -4,20 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
-
-	<div class="example-wrapper">
+	<div>
 		<h1>Hello
 			{{ controller_name }}! ✅</h1>
 		<a href="/pokemon/id">Id</a>
@@ -27,7 +14,7 @@
 
 		<ul>
 			{% for pokemon in data %}
-				<li class="bg-success">
+				<li>
 					<a href="/pokemon-details/{{ pokemon.name }}" aria-label="Page vers le produit">{{pokemon.id}}
 						-
 						{{pokemon.name}}
@@ -36,7 +23,7 @@
 				</li>
 			{% endfor %}
 		</ul>
-		<div class="paginationbarre row" style="margin-top: 15px">
+		<div>
 			{{ knp_pagination_render(data) }}
 
 		</div>
