--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,15 +16,18 @@
     </head>
     <body>
 
-        {% block body %}
-        <div id="sidebar">
+{% block header %}
+<div id="sidebar">
                 {% block sidebar %}
                     <ul>
-                        <li><a href="{{ path('homepage') }}">Home</a></li>
-                        <li><a href="{{ path('blog_index') }}">Blog</a></li>
+                        <li><a href="{{ '/' }}">Home</a></li>
+                        <li><a href="{{ '/pokemon' }}">Liste des pokemons</a></li>
                     </ul>
                 {% endblock %}
             </div>
+            {% endblock %}
+        {% block body %}
+        
             {% endblock %}
     </body>
 </html>
