--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Pokedex
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/1200px-Pok%C3%A9_Ball_icon.svg.png">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		{% block stylesheets %}
@@ -20,18 +20,18 @@
 	<body>
 
 		{% block header %}
-			<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-				<a class="navbar-brand" href="#">Navbar</a>
+			<nav class="navbar navbar-expand-sm bg-danger">
+				<a class="navbar-brand text-white" href="#">POKEDEX</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="collapsibleNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="{{'/'}}">Home</a>
+							<a class="nav-link text-white" href="{{'/'}}">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{'/pokemon'}}">Pokemons List</a>
+							<a class="nav-link text-white" href="{{'/pokemon'}}">pokémons List</a>
 						</li>
 					</ul>
 				</div>
