--- a/templates/pokemon/index.html.twig
+++ b/templates/pokemon/index.html.twig
@@ -1,34 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PokemonController!
-{% endblock %}
-
 {% block body %}
 	<div class="container-fluid">
+		<div class="row" style="font-size:18px">
+			<p class="mr-3" style="font-size:18px">Options de tri :</p>
+			<a class="text-dark" href="/pokemon/id">Id</a>
+			<span class="ml-3 mr-3">-</span>
+			<a class="text-dark" href="/pokemon/name">Name</a>
+			<span class="ml-3 mr-3">-</span>
+			<a class="text-dark" href="/pokemon/id">Type</a>
+		</div>
 
 
-		<h1>Liste des pokemons</h1>
-		<a href="/pokemon/id">Id</a>
-		<a href="/pokemon/name">Name</a>
-		<a href="/pokemon/id">Type</a>
 		<div class="row">
 			{% for pokemon in data %}
-				<div class="col-sm-3 p-4">
-					<div class="row bg-light">
-						<div class="col-6">
-							<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon.id}}.png"/>
-						</div>
-						<div class="col-6">
-							<a href="/pokemon-details/{{ pokemon.name }}" aria-label="Page vers le produit">
+				<div class="col-md-4 col-lg-3  p-4">
+					<a href="/pokemon-details/{{ pokemon.name }}" aria-label="Page vers le produit">
+						<div class="row bg-light">
+							<div class="col-6">
+								<img class="mx-auto d-block" style="height:100%" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon.id}}.png"/>
+							</div>
+							<div class="col-6">
 								<div>
-									<h2>{{pokemon.name}}</h2>
-									<h4>{{pokemon.id}}</h4>
-									<p>{{pokemon.types[0].type.name}}</p>
+									<p class="text-dark">#{{pokemon.id}}</p>
+									<p class="text-dark">{{pokemon.name}}</p>
+									<p class="text-dark">{{pokemon.types[0].type.name}}</p>
 								</div>
-							</a>
+							</div>
 						</div>
-
-					</div>
+					</a>
 
 				</div>
 			{% endfor %}
@@ -38,7 +38,6 @@
 
 		<div>
 			{{ knp_pagination_render(data) }}
-
 		</div>
 	</div>
 {% endblock %}
